--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -36,9 +36,9 @@ jobs:
 
       - name: Get Woodpecker version
         id: get_woodpecker_version
-        run: |
-          cd woodpecker
-          WOODPECKER_VERSION=$(git describe --tags --abbrev=0)
+        run: >
+          cd woodpecker;
+          WOODPECKER_VERSION=$(git describe --tags --abbrev=0);
           echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV
 
       - name: Output Woodpecker version
