--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -21,8 +21,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          submodules: recursive
 
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v1.0.1
@@ -40,10 +38,10 @@ jobs:
         id: get_woodpecker_version
         run: >
           cd woodpecker;
-          pwd;
-          ls;
+          git fetch --tags;
           WOODPECKER_VERSION=$(git describe --tags --abbrev=0);
-          echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV
+          echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV;
+          git checkout ${WOODPECKER_VERSION}
 
       - name: Output Woodpecker version
         id: output_woodpecker_version
