--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -21,6 +21,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: recursive
 
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v1.0.1
@@ -39,6 +41,7 @@ jobs:
         run: >
           cd woodpecker;
           git fetch --tags;
+          git status;
           WOODPECKER_VERSION=$(git describe --tags --abbrev=0);
           echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV;
           git checkout ${WOODPECKER_VERSION}
