--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -40,9 +40,8 @@ jobs:
         id: get_woodpecker_version
         run: >
           cd woodpecker;
-          git fetch --tags;
-          git status;
-          WOODPECKER_VERSION=$(git describe --tags --abbrev=0);
+          LATEST_TAG_REV=$(git rev-list --tags --max-count 1)
+          WOODPECKER_VERSION=$(git describe --tags ${LATEST_TAG_REV});
           echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV;
           git checkout ${WOODPECKER_VERSION}
 
