--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -40,7 +40,9 @@ jobs:
         id: get_woodpecker_version
         run: >
           cd woodpecker;
-          LATEST_TAG_REV=$(git rev-list --tags --max-count 1)
+          git rev-list --tags --max-count 1;
+          git describe --tags $(git rev-list --tags --max-count 1);
+          LATEST_TAG_REV=$(git rev-list --tags --max-count 1);
           WOODPECKER_VERSION=$(git describe --tags ${LATEST_TAG_REV});
           echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV;
           git checkout ${WOODPECKER_VERSION}
