--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -50,31 +50,31 @@ jobs:
         id: output_woodpecker_version
         run: echo "Latest Woodpecker version is ${WOODPECKER_VERSION}."
 
-      # - name: Build Woodpecker
-      #   uses: docker/build-push-action@v2.1.0
-      #   with:
-      #     file: Dockerfile.build
-      #     tags: woodpecker-build
-      #     platforms: ${{ env.PLATFORMS }}
-      #     push: false
-      #     build-args: [ VERSION=${WOODPECKER_VERSION} ]
+      - name: Build Woodpecker
+        uses: docker/build-push-action@v2.1.0
+        with:
+          file: Dockerfile.build
+          tags: woodpecker-build
+          platforms: ${{ env.PLATFORMS }}
+          push: false
+          build-args: VERSION=${WOODPECKER_VERSION}
 
-      # - name: Build and push Woodpecker Server image
-      #   uses: docker/build-push-action@v2.1.0
-      #   with:
-      #     file: Dockerfile.server
-      #     tags: |
-      #       florianpiesche/woodpecker-server
-      #       florianpiesche/woodpecker-server:${WOODPECKER_VERSION}
-      #     platforms: ${{ env.PLATFORMS }}
-      #     push: true
+      - name: Build and push Woodpecker Server image
+        uses: docker/build-push-action@v2.1.0
+        with:
+          file: Dockerfile.server
+          tags: |
+            florianpiesche/woodpecker-server
+            florianpiesche/woodpecker-server:${WOODPECKER_VERSION}
+          platforms: ${{ env.PLATFORMS }}
+          push: true
 
-      # - name: Build and push Woodpecker Agent image
-      #   uses: docker/build-push-action@v2.1.0
-      #   with:
-      #     file: Dockerfile.agent
-      #     tags: |
-      #       florianpiesche/woodpecker-agent
-      #       florianpiesche/woodpecker-agent:${WOODPECKER_VERSION}
-      #     platforms: ${{ env.PLATFORMS }}
-      #     push: true
+      - name: Build and push Woodpecker Agent image
+        uses: docker/build-push-action@v2.1.0
+        with:
+          file: Dockerfile.agent
+          tags: |
+            florianpiesche/woodpecker-agent
+            florianpiesche/woodpecker-agent:${WOODPECKER_VERSION}
+          platforms: ${{ env.PLATFORMS }}
+          push: true
