--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Docker Setup Buildx
         uses: docker/setup-buildx-action@v1.0.3
+        with:
+          driver-opts: network=host
 
       - name: Login to DockerHub
         uses: docker/login-action@v1 
