--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -50,7 +50,7 @@ jobs:
         id: check_tag_exists
         continue-on-error: true
         run: |
-          TAGS=curl https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name"
+          TAGS=$(curl https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
           if [[ " ${TAGS[@]} " =~ " ${WOODPECKER_VERSION} " ]]; then
             echo "Tag ${WOODPECKER_VERSION} already built."
             exit 1
