--- a/.github/workflows/build-images.yaml
+++ b/.github/workflows/build-images.yaml
@@ -1,88 +1,88 @@
-name: Build multi-platform Docker images
+# name: Build latest dev image
 
-on:
-  # Allow manual runs.
-  workflow_dispatch:
-  # Also run on updates to this repo.
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  
-env:
-  PLATFORMS: linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64
+# on:
+#   # Allow manual runs.
+#   workflow_dispatch:
+#   # Also run on updates to this repo.
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
 
-jobs:
+# env:
+#   PLATFORMS: linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64
 
-  build-image:
-    runs-on: ubuntu-latest
+# jobs:
 
-    services:
-      registry:
-        image: registry:2
-        ports:
-          - 5000:5000
+#   build-image:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          submodules: recursive
+#     services:
+#       registry:
+#         image: registry:2
+#         ports:
+#           - 5000:5000
 
-      - name: Docker Setup QEMU
-        uses: docker/setup-qemu-action@v1.0.1
+#     steps:
+#       - uses: actions/checkout@v2
+#         with:
+#           submodules: recursive
 
-      - name: Docker Setup Buildx
-        uses: docker/setup-buildx-action@v1.0.3
-        with:
-          driver-opts: network=host
+#       - name: Docker Setup QEMU
+#         uses: docker/setup-qemu-action@v1.0.1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Docker Setup Buildx
+#         uses: docker/setup-buildx-action@v1.0.3
+#         with:
+#           driver-opts: network=host
 
-      - name: Get Woodpecker version
-        id: get_woodpecker_version
-        run: >
-          cd woodpecker;
-          git fetch --tags;
-          LATEST_TAG_REV=$(git rev-list --tags --max-count 1);
-          WOODPECKER_VERSION=$(git describe --tags ${LATEST_TAG_REV});
-          echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV;
-          git checkout ${WOODPECKER_VERSION}
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v1 
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Output Woodpecker version
-        id: output_woodpecker_version
-        run: echo "Latest Woodpecker version is ${WOODPECKER_VERSION}."
+#       - name: Get Woodpecker version
+#         id: get_woodpecker_version
+#         run: >
+#           cd woodpecker;
+#           git fetch --tags;
+#           LATEST_TAG_REV=$(git rev-list --tags --max-count 1);
+#           WOODPECKER_VERSION=$(git describe --tags ${LATEST_TAG_REV});
+#           echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV;
+#           git checkout ${WOODPECKER_VERSION}
 
-      - name: Build Woodpecker
-        uses: docker/build-push-action@v2.1.0
-        with:
-          file: Dockerfile.build
-          tags: localhost:5000/woodpecker/build
-          platforms: ${{ env.PLATFORMS }}
-          push: true
-          build-args: VERSION=${{ env.WOODPECKER_VERSION }}
+#       - name: Output Woodpecker version
+#         id: output_woodpecker_version
+#         run: echo "Latest Woodpecker version is ${WOODPECKER_VERSION}."
 
-      - name: Build and push Woodpecker Server image
-        uses: docker/build-push-action@v2.1.0
-        with:
-          file: Dockerfile.server
-          tags: |
-            florianpiesche/woodpecker-server
-            florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
-          platforms: ${{ env.PLATFORMS }}
-          push: true
+#       - name: Build Woodpecker
+#         uses: docker/build-push-action@v2.1.0
+#         with:
+#           file: Dockerfile.build
+#           tags: localhost:5000/woodpecker/build
+#           platforms: ${{ env.PLATFORMS }}
+#           push: true
+#           build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
-      - name: Build and push Woodpecker Agent image
-        uses: docker/build-push-action@v2.1.0
-        with:
-          file: Dockerfile.agent
-          tags: |
-            florianpiesche/woodpecker-agent
-            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
-          platforms: ${{ env.PLATFORMS }}
-          push: true
+#       - name: Build and push Woodpecker Server image
+#         uses: docker/build-push-action@v2.1.0
+#         with:
+#           file: Dockerfile.server
+#           tags: |
+#             florianpiesche/woodpecker-server
+#             florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
+#           platforms: ${{ env.PLATFORMS }}
+#           push: true
+
+#       - name: Build and push Woodpecker Agent image
+#         uses: docker/build-push-action@v2.1.0
+#         with:
+#           file: Dockerfile.agent
+#           tags: |
+#             florianpiesche/woodpecker-agent
+#             florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
+#           platforms: ${{ env.PLATFORMS }}
+#           push: true
