--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -50,53 +50,54 @@ jobs:
         id: check_tag_exists
         continue-on-error: true
         run: |
-          TAGS=$(curl https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
+          TAGS=$(curl -s https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
+          echo ${TAGS}
           if [[ " ${TAGS[@]} " =~ " ${WOODPECKER_VERSION} " ]]; then
             echo "Tag ${WOODPECKER_VERSION} already built."
-            exit 1
+            exit 0
           else
             echo "Tag ${WOODPECKER_VERSION} not yet built."
-            exit 0
+            exit 1
           fi
 
-      - name: Docker Setup QEMU
-        if: ${{ steps.check_tag_exists.outcome == success() }}
-        uses: docker/setup-qemu-action@v1.0.1
+      # - name: Docker Setup QEMU
+      #   if: ${{ steps.check_tag_exists.outcome == success() }}
+      #   uses: docker/setup-qemu-action@v1.0.1
 
-      - name: Docker Setup Buildx
-        if: ${{ steps.check_tag_exists.outcome == success() }}
-        uses: docker/setup-buildx-action@v1.0.3
-        with:
-          driver-opts: network=host
+      # - name: Docker Setup Buildx
+      #   if: ${{ steps.check_tag_exists.outcome == success() }}
+      #   uses: docker/setup-buildx-action@v1.0.3
+      #   with:
+      #     driver-opts: network=host
 
-      - name: Build Woodpecker
-        if: ${{ steps.check_tag_exists.outcome == success() }}
-        uses: docker/build-push-action@v2.1.0
-        with:
-          file: Dockerfile.build
-          tags: localhost:5000/woodpecker/build
-          platforms: ${{ env.PLATFORMS }}
-          push: true
-          build-args: VERSION=${{ env.WOODPECKER_VERSION }}
+      # - name: Build Woodpecker
+      #   if: ${{ steps.check_tag_exists.outcome == success() }}
+      #   uses: docker/build-push-action@v2.1.0
+      #   with:
+      #     file: Dockerfile.build
+      #     tags: localhost:5000/woodpecker/build
+      #     platforms: ${{ env.PLATFORMS }}
+      #     push: true
+      #     build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
-      - name: Build and push Woodpecker Server image
-        if: ${{ steps.check_tag_exists.outcome == success() }}
-        uses: docker/build-push-action@v2.1.0
-        with:
-          file: Dockerfile.server
-          tags: |
-            florianpiesche/woodpecker-server
-            florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
-          platforms: ${{ env.PLATFORMS }}
-          push: true
+      # - name: Build and push Woodpecker Server image
+      #   if: ${{ steps.check_tag_exists.outcome == success() }}
+      #   uses: docker/build-push-action@v2.1.0
+      #   with:
+      #     file: Dockerfile.server
+      #     tags: |
+      #       florianpiesche/woodpecker-server
+      #       florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
+      #     platforms: ${{ env.PLATFORMS }}
+      #     push: true
 
-      - name: Build and push Woodpecker Agent image
-        if: ${{ steps.check_tag_exists.outcome == success() }}
-        uses: docker/build-push-action@v2.1.0
-        with:
-          file: Dockerfile.agent
-          tags: |
-            florianpiesche/woodpecker-agent
-            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
-          platforms: ${{ env.PLATFORMS }}
-          push: true
+      # - name: Build and push Woodpecker Agent image
+      #   if: ${{ steps.check_tag_exists.outcome == success() }}
+      #   uses: docker/build-push-action@v2.1.0
+      #   with:
+      #     file: Dockerfile.agent
+      #     tags: |
+      #       florianpiesche/woodpecker-agent
+      #       florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
+      #     platforms: ${{ env.PLATFORMS }}
+      #     push: true
