--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -52,7 +52,7 @@ jobs:
         run: |
           TAGS=$(curl -s https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
           echo ${TAGS}
-          if [[ " ${TAGS[@]} " =~ " ${WOODPECKER_VERSION} " ]]; then
+          if [[ "${TAGS}" == *" ${WOODPECKER_VERSION} "* ]]; then
             echo "Tag ${WOODPECKER_VERSION} already built."
             exit 0
           else
