--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -49,6 +49,7 @@ jobs:
         run: |
           echo "Checking whether tag florianpiesche/woodpecker-server:${WOODPECKER_VERSION} Docker image exists."
           TAGS=$(curl -s https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
+          echo "Got tags: ${TAGS}"
 
           if [[ "${TAGS}" == *"${WOODPECKER_VERSION}"* ]]; then
             echo "WOODPECKER_TAG_EXISTS=true" >> $GITHUB_ENV
