--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -51,7 +51,7 @@ jobs:
           TAGS=$(curl -s https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
           echo "Got tags: ${TAGS}"
 
-          if [[ "${TAGS}" == *"${WOODPECKER_VERSION}"* ]]; then
+          if [[ "${TAGS[@]}" =~ "${WOODPECKER_VERSION}" ]]; then
             echo "WOODPECKER_TAG_EXISTS=true" >> $GITHUB_ENV
           else
             echo "WOODPECKER_TAG_EXISTS=false" >> $GITHUB_ENV
