--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -45,63 +45,57 @@ jobs:
           echo "WOODPECKER_VERSION=${WOODPECKER_VERSION}" >> $GITHUB_ENV
           git checkout ${WOODPECKER_VERSION}
 
-      - name: Check whether latest tag needs building
+      - name: Check whether latest release needs building
         run: |
           TAGS=$(curl -s https://registry.hub.docker.com/v1/repositories/florianpiesche/woodpecker-server/tags | jq -r ".[].name")
 
           for tag in ${TAGS[@]}; do
             if [[ "$tag" == "${WOODPECKER_VERSION}" ]]; then
-              echo "WOODPECKER_TAG_EXISTS=true" >> $GITHUB_ENV
-              echo "Found tag ${WOODPECKER_VERSION}!"
+              echo "WOODPECKER_BUILD_TAG=false" >> $GITHUB_ENV
               exit 0
             fi
           done
 
-          echo "Failed to find tag ${WOODPECKER_VERSION}."
-          echo "WOODPECKER_TAG_EXISTS=false" >> $GITHUB_ENV
+          echo "WOODPECKER_BUILD_TAG=true" >> $GITHUB_ENV
 
-      - name: Run this only if tag needs building
-        if: env.WOODPECKER_TAG_EXISTS == 'false'
-        run: echo "Tag ${WOODPECKER_VERSION} needs building."
+      - name: Docker Setup QEMU
+        if: env.WOODPECKER_BUILD_TAG == 'true'
+        uses: docker/setup-qemu-action@v1.0.1
 
-      # - name: Docker Setup QEMU
-      #   if: env.WOODPECKER_TAG_EXISTS == 'false'
-      #   uses: docker/setup-qemu-action@v1.0.1
+      - name: Docker Setup Buildx
+        if: env.WOODPECKER_BUILD_TAG == 'true'
+        uses: docker/setup-buildx-action@v1.0.3
+        with:
+          driver-opts: network=host
 
-      # - name: Docker Setup Buildx
-      #   if: ${{ steps.check_tag_exists.outcome == success() }}
-      #   uses: docker/setup-buildx-action@v1.0.3
-      #   with:
-      #     driver-opts: network=host
+      - name: Build Woodpecker
+        if: env.WOODPECKER_BUILD_TAG == 'true'
+        uses: docker/build-push-action@v2.1.0
+        with:
+          file: Dockerfile.build
+          tags: localhost:5000/woodpecker/build
+          platforms: ${{ env.PLATFORMS }}
+          push: true
+          build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
-      # - name: Build Woodpecker
-      #   if: ${{ steps.check_tag_exists.outcome == success() }}
-      #   uses: docker/build-push-action@v2.1.0
-      #   with:
-      #     file: Dockerfile.build
-      #     tags: localhost:5000/woodpecker/build
-      #     platforms: ${{ env.PLATFORMS }}
-      #     push: true
-      #     build-args: VERSION=${{ env.WOODPECKER_VERSION }}
+      - name: Build and push Woodpecker Server image
+        if: env.WOODPECKER_BUILD_TAG == 'true'
+        uses: docker/build-push-action@v2.1.0
+        with:
+          file: Dockerfile.server
+          tags: |
+            florianpiesche/woodpecker-server
+            florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
+          platforms: ${{ env.PLATFORMS }}
+          push: true
 
-      # - name: Build and push Woodpecker Server image
-      #   if: ${{ steps.check_tag_exists.outcome == success() }}
-      #   uses: docker/build-push-action@v2.1.0
-      #   with:
-      #     file: Dockerfile.server
-      #     tags: |
-      #       florianpiesche/woodpecker-server
-      #       florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
-      #     platforms: ${{ env.PLATFORMS }}
-      #     push: true
-
-      # - name: Build and push Woodpecker Agent image
-      #   if: ${{ steps.check_tag_exists.outcome == success() }}
-      #   uses: docker/build-push-action@v2.1.0
-      #   with:
-      #     file: Dockerfile.agent
-      #     tags: |
-      #       florianpiesche/woodpecker-agent
-      #       florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
-      #     platforms: ${{ env.PLATFORMS }}
-      #     push: true
+      - name: Build and push Woodpecker Agent image
+        if: env.WOODPECKER_BUILD_TAG == 'true'
+        uses: docker/build-push-action@v2.1.0
+        with:
+          file: Dockerfile.agent
+          tags: |
+            florianpiesche/woodpecker-agent
+            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
+          platforms: ${{ env.PLATFORMS }}
+          push: true
