--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,11 +1,14 @@
 FROM alpine:latest
-EXPOSE 8000 9000 80 443
+ARG VERSION="unknown"
 
-ENV DATABASE_DRIVER=sqlite3
-ENV DATABASE_CONFIG=/var/lib/drone/drone.sqlite
-ENV GODEBUG=netdns=go
+ENV DATABASE_DRIVER sqlite3
+ENV DATABASE_CONFIG /var/lib/drone/drone.sqlite
+ENV GODEBUG netdns=go
 ENV XDG_CACHE_HOME /var/lib/drone
+ENV WOODPECKER_VERSION ${VERSION}
 
 COPY --from=localhost:5000/woodpecker/build /woodpecker/release/drone-server /bin/
+
+EXPOSE 8000 9000 80 443
 
 CMD ["/bin/drone-server"]
