--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -30,19 +30,6 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Get current Woodpecker revision ID
-        run: |
-          cd woodpecker
-          CURRENT_REV=$(git rev-parse HEAD)
-          echo "Building dev images from rev ${CURRENT_REV}"
-          echo "WOODPECKER_VERSION=${CURRENT_REV}" >> $GITHUB_ENV
-
       - name: Docker Setup QEMU
         uses: docker/setup-qemu-action@v1.0.1
 
@@ -51,6 +38,23 @@ jobs:
         with:
           driver-opts: network=host
 
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Get current commit on woodpecker submodule
+        run: |
+          echo WOODPECKER_COMMIT=$(git rev-parse --short @:./woodpecker) >> $GITHUB_ENV
+
       - name: Build Woodpecker
         uses: docker/build-push-action@v2.1.0
         with:
@@ -58,17 +62,20 @@ jobs:
           tags: localhost:5000/woodpecker/build
           platforms: ${{ env.PLATFORMS }}
           push: true
-          build-args: VERSION=${{ env.WOODPECKER_VERSION }}
+          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
       - name: Build and push Woodpecker Server image
         uses: docker/build-push-action@v2.1.0
         with:
           file: Dockerfile.server
           tags: |
-            florianpiesche/woodpecker-server:dev
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:latest
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:${{ env.WOODPECKER_COMMIT }}
+            florianpiesche/woodpecker-server:latest
+            florianpiesche/woodpecker-server:${{ env.WOODPECKER_COMMIT }}
           platforms: ${{ env.PLATFORMS }}
           push: true
-          build-args: VERSION=${{ env.WOODPECKER_VERSION }}
+          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
       - name: Build and push Woodpecker Agent image
         if: env.WOODPECKER_BUILD_AGENT == 'true'
@@ -76,7 +83,10 @@ jobs:
         with:
           file: Dockerfile.agent
           tags: |
-            florianpiesche/woodpecker-agent:dev
+            ghcr.io/${{ github.repository_owner }}/woodpecker-agent:latest
+            ghcr.io/${{ github.repository_owner }}/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
+            florianpiesche/woodpecker-agent:latest
+            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
           platforms: ${{ env.PLATFORMS }}
           push: true
-          build-args: VERSION=${{ env.WOODPECKER_VERSION }}
+          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
