--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -36,6 +36,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1 
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
       - name: Get latest Woodpecker tag
         run: |
           cd woodpecker
@@ -97,7 +104,9 @@ jobs:
         with:
           file: Dockerfile.server
           tags: |
-            florianpiesche/woodpecker-server:latest
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:stable
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:${{ env.WOODPECKER_VERSION }}
+            florianpiesche/woodpecker-server:stable
             florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
           platforms: ${{ env.PLATFORMS }}
           push: true
@@ -109,8 +118,10 @@ jobs:
         with:
           file: Dockerfile.agent
           tags: |
-            florianpiesche/woodpecker-agent:latest
-            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_VERSION }}
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:stable
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:${{ env.WOODPECKER_VERSION }}
+            florianpiesche/woodpecker-server:stable
+            florianpiesche/woodpecker-server:${{ env.WOODPECKER_VERSION }}
           platforms: ${{ env.PLATFORMS }}
           push: true
           build-args: VERSION=${{ env.WOODPECKER_VERSION }}
