--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -8,8 +8,6 @@ on:
     branches:
       - main
   pull_request:
-    branches:
-      - main
   
 env:
   PLATFORMS: linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64
@@ -64,7 +62,36 @@ jobs:
           push: true
           build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
+      - name: Build Woodpecker Server image
+        if: github.ref != 'refs/heads/main'
+        uses: docker/build-push-action@v2
+        with:
+          file: Dockerfile.server
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:latest
+            ghcr.io/${{ github.repository_owner }}/woodpecker-server:${{ env.WOODPECKER_COMMIT }}
+            florianpiesche/woodpecker-server:latest
+            florianpiesche/woodpecker-server:${{ env.WOODPECKER_COMMIT }}
+          platforms: ${{ env.PLATFORMS }}
+          push: false
+          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
+
+      - name: Build Woodpecker Agent image
+        if: github.ref != 'refs/heads/main'
+        uses: docker/build-push-action@v2
+        with:
+          file: Dockerfile.agent
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/woodpecker-agent:latest
+            ghcr.io/${{ github.repository_owner }}/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
+            florianpiesche/woodpecker-agent:latest
+            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
+          platforms: ${{ env.PLATFORMS }}
+          push: false
+          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
+
       - name: Build and push Woodpecker Server image
+        if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.server
@@ -78,7 +105,7 @@ jobs:
           build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
       - name: Build and push Woodpecker Agent image
-        if: env.WOODPECKER_BUILD_AGENT == 'true'
+        if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.agent
