--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -11,6 +11,7 @@ on:
   
 env:
   PLATFORMS: linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64
+  PUSH_IMAGE: ${{ github.ref == 'refs/heads/main' }}
 
 jobs:
 
@@ -37,12 +38,14 @@ jobs:
           driver-opts: network=host
 
       - name: Login to DockerHub
+        if: env.PUSH_IMAGE
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
+        if: env.PUSH_IMAGE
         uses: docker/login-action@v1 
         with:
           registry: ghcr.io
@@ -63,25 +66,6 @@ jobs:
           build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
       - name: Build Woodpecker Server image
-        if: github.ref != 'refs/heads/main'
-        uses: docker/build-push-action@v2
-        with:
-          file: Dockerfile.server
-          platforms: ${{ env.PLATFORMS }}
-          push: false
-          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
-
-      - name: Build Woodpecker Agent image
-        if: github.ref != 'refs/heads/main'
-        uses: docker/build-push-action@v2
-        with:
-          file: Dockerfile.agent
-          platforms: ${{ env.PLATFORMS }}
-          push: false
-          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
-
-      - name: Build and push Woodpecker Server image
-        if: github.ref == 'refs/heads/main'
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.server
@@ -91,11 +75,10 @@ jobs:
             florianpiesche/woodpecker-server:latest
             florianpiesche/woodpecker-server:${{ env.WOODPECKER_COMMIT }}
           platforms: ${{ env.PLATFORMS }}
-          push: true
+          push: ${{ env.PUSH_IMAGE }}
           build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
-      - name: Build and push Woodpecker Agent image
-        if: github.ref == 'refs/heads/main'
+      - name: Build Woodpecker Agent image
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.agent
@@ -105,5 +88,5 @@ jobs:
             florianpiesche/woodpecker-agent:latest
             florianpiesche/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
           platforms: ${{ env.PLATFORMS }}
-          push: true
+          push: ${{ env.PUSH_IMAGE }}
           build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
