--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -32,14 +32,14 @@ jobs:
           submodules: recursive
 
       - name: Login to DockerHub
-        if: env.PUSH_IMAGE
+        if: ${{ env.PUSH_IMAGE == 'true' }}
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Login to GitHub Container Registry
-        if: env.PUSH_IMAGE
+        if: ${{ env.PUSH_IMAGE == 'true' }}
         uses: docker/login-action@v1 
         with:
           registry: ghcr.io
@@ -56,12 +56,8 @@ jobs:
           git checkout ${WOODPECKER_VERSION}
 
       - name: Check whether latest release needs building
-        if: ${{ env.PUSH_IMAGE }}
+        if: ${{ env.PUSH_IMAGE == 'true' }}
         run: |
-          # Assume we're going to build both server and agent unless the images already exist.
-          echo "WOODPECKER_BUILD_SERVER=true" >> $GITHUB_ENV
-          echo "WOODPECKER_BUILD_AGENT=true" >> $GITHUB_ENV
-
           # Check whether we can skip building the server
           SERVER_TAGS=$(curl -s https://registry.hub.docker.com/v1/repositories/${{ secrets.DOCKERHUB_USERNAME }}/woodpecker-server/tags | jq -r ".[].name")
           for tag in ${SERVER_TAGS[@]}; do
@@ -83,17 +79,17 @@ jobs:
           done
 
       - name: Docker Setup QEMU
-        if: ${{ env.WOODPECKER_BUILD_SERVER || env.WOODPECKER_BUILD_AGENT }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true'  || env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
         uses: docker/setup-qemu-action@v1
 
       - name: Docker Setup Buildx
-        if: ${{ env.WOODPECKER_BUILD_SERVER || env.WOODPECKER_BUILD_AGENT }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true'  || env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: network=host
 
       - name: Build Woodpecker
-        if: ${{ env.WOODPECKER_BUILD_SERVER || env.WOODPECKER_BUILD_AGENT }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true' || env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.build
@@ -103,7 +99,7 @@ jobs:
           build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
       - name: Build Woodpecker Server image
-        if: ${{ env.WOODPECKER_BUILD_SERVER }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true' || env.PUSH_IMAGE != 'true' }}
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.server
@@ -115,7 +111,7 @@ jobs:
           build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
       - name: Build Woodpecker Agent image
-        if: ${{ env.WOODPECKER_BUILD_AGENT }}
+        if: ${{ env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.agent
