--- a/.github/workflows/build-tags.yaml
+++ b/.github/workflows/build-tags.yaml
@@ -79,17 +79,17 @@ jobs:
           done
 
       - name: Docker Setup QEMU
-        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true'  || env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true'  || env.WOODPECKER_BUILD_AGENT == 'true' }}
         uses: docker/setup-qemu-action@v1
 
       - name: Docker Setup Buildx
-        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true'  || env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true'  || env.WOODPECKER_BUILD_AGENT == 'true' }}
         uses: docker/setup-buildx-action@v1
         with:
           driver-opts: network=host
 
       - name: Build Woodpecker
-        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true' || env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true' || env.WOODPECKER_BUILD_AGENT == 'true' }}
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.build
@@ -99,7 +99,7 @@ jobs:
           build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
       - name: Build Woodpecker Server image
-        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true' || env.PUSH_IMAGE != 'true' }}
+        if: ${{ env.WOODPECKER_BUILD_SERVER == 'true' }}
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.server
@@ -111,7 +111,7 @@ jobs:
           build-args: VERSION=${{ env.WOODPECKER_VERSION }}
 
       - name: Build Woodpecker Agent image
-        if: ${{ env.WOODPECKER_BUILD_AGENT == 'true' || env.PUSH_IMAGE != 'true' }}
+        if: ${{ env.WOODPECKER_BUILD_AGENT == 'true' }}
         uses: docker/build-push-action@v2
         with:
           file: Dockerfile.agent
