--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -12,5 +12,5 @@ RUN go test -cover $(go list ./...)
 FROM test AS build
 ARG VERSION
 ENV VERSION=${VERSION} GOOS=linux
-RUN go build -ldflags '-extldflags "-static" -X github.com/woodpecker-ci/woodpecker/version.Version='${VERSION} -o release/drone-server github.com/woodpecker-ci/woodpecker/cmd/drone-server
-RUN go build -ldflags '-X github.com/woodpecker-ci/woodpecker/version.Version='${VERSION} -o release/drone-agent github.com/woodpecker-ci/woodpecker/cmd/drone-agent
+RUN go build -ldflags '-extldflags "-static" -X github.com/woodpecker-ci/woodpecker/version.Version=${VERSION}' -o release/woodpecker-server github.com/woodpecker-ci/woodpecker/cmd/server
+RUN go build -ldflags '-extldflags "-static" -X github.com/woodpecker-ci/woodpecker/version.Version=${VERSION}' -o release/woodpecker-agent github.com/woodpecker-ci/woodpecker/cmd/agent
