Update Dockerfiles to build images properly

--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -6,8 +6,9 @@ ENV GODEBUG netdns=go
 ENV WOODPECKER_VERSION ${VERSION}
 
 RUN apk add -U --no-cache ca-certificates
-COPY --from=localhost:5000/woodpecker/build /woodpecker/release/agent /bin/
-RUN ln -s /bin/agent /bin/drone-agent
+COPY --from=localhost:5000/woodpecker/build /woodpecker/release/woodpecker-agent /bin/woodpecker-agent
+RUN ln -s /bin/woodpecker-agent /bin/agent
+RUN ln -s /bin/woodpecker-agent /bin/drone-agent
 
 EXPOSE 3000
 HEALTHCHECK CMD ["/bin/agent", "ping"]
