--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,5 +1,5 @@
 # STAGE 1: Run tests
-FROM golang:alpine as test
+FROM golang:1.17.6-alpine3.15 as test
 RUN apk add --no-cache gcc musl-dev make yarn
 ADD ./woodpecker /woodpecker
 
