--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -10,7 +10,8 @@ on:
   pull_request:
   
 env:
-  PLATFORMS: linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64
+  PLATFORMS: linux/arm64/v8,linux/amd64
+  # PLATFORMS: linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/amd64
   PUSH_IMAGE: ${{ github.ref == 'refs/heads/main' }}
 
 jobs:
@@ -78,15 +79,15 @@ jobs:
           push: ${{ env.PUSH_IMAGE }}
           build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
 
-      - name: Build Woodpecker Agent image
-        uses: docker/build-push-action@v2
-        with:
-          file: Dockerfile.agent
-          tags: |
-            ghcr.io/${{ github.repository_owner }}/woodpecker-agent:latest
-            ghcr.io/${{ github.repository_owner }}/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
-            florianpiesche/woodpecker-agent:latest
-            florianpiesche/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
-          platforms: ${{ env.PLATFORMS }}
-          push: ${{ env.PUSH_IMAGE }}
-          build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
+      # - name: Build Woodpecker Agent image
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     file: Dockerfile.agent
+      #     tags: |
+      #       ghcr.io/${{ github.repository_owner }}/woodpecker-agent:latest
+      #       ghcr.io/${{ github.repository_owner }}/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
+      #       florianpiesche/woodpecker-agent:latest
+      #       florianpiesche/woodpecker-agent:${{ env.WOODPECKER_COMMIT }}
+      #     platforms: ${{ env.PLATFORMS }}
+      #     push: ${{ env.PUSH_IMAGE }}
+      #     build-args: VERSION=${{ env.WOODPECKER_COMMIT }}
